[engine][manual] implement generator and tests